added profile page, integrated fron and backend

--- a/frontend/src/app/features/auth-users/components/auth-button/auth-button.component.html
+++ b/frontend/src/app/features/auth-users/components/auth-button/auth-button.component.html
@@ -1,1 +1,2 @@
-<button [type]="type" class="btn">{{ text }}</button>
+<button [type]="type"
+ class="btn" [disabled]="disabled">{{ text }}</button>
