--- a/frontend/src/app/features/auth-users/components/interest-selector/interest-selector.component.html
+++ b/frontend/src/app/features/auth-users/components/interest-selector/interest-selector.component.html
@@ -1,9 +1,9 @@
-<div class="interests">
-  @for (interest of interests; track interest) {
+<div class="interests" [class.readonly]="readonly()">
+  @for (pref of availablePreferences; track pref.value) {
     <div 
-      (click)="toggleInterest(interest)" 
-      [class.selected]="selected.includes(interest)">
-      {{ interest }}
+      (click)="togglePreference(pref.value)" 
+      [class.selected]="isSelected(pref.value)">
+      {{ pref.label }}
     </div>
   }
 </div>
