--- a/frontend/src/app/features/auth-users/components/auth-form/auth-form.component.html
+++ b/frontend/src/app/features/auth-users/components/auth-form/auth-form.component.html
@@ -1,11 +1,24 @@
+
 <form class="auth-form" (ngSubmit)="submitForm()">
 
+  @if (errorMessage()) {
+    <div class="alert alert-error">
+      {{ errorMessage() }}
+    </div>
+  }
+  @if (successMessage()) {
+    <div class="alert alert-success">
+      
+      <span>{{ successMessage() }}</span>
+    </div>
+  }
   <div class="form-group">
     <app-auth-input
       label="Adresse email"
       type="email"
       placeholder="exemple@email.com"
-      [(value)]="user.email">
+      [(value)]="user.email"
+      [disabled]="isLoading()">
     </app-auth-input>
   </div>
 
@@ -14,27 +27,36 @@
       label="Mot de passe"
       type="password"
       placeholder="********"
-      [(value)]="user.password">
+      [(value)]="user.password"
+      [disabled]="isLoading()">
     </app-auth-input>
   </div>
 
-  <div class="form-group">
-    <app-auth-input
-      label="Confirmer le mot de passe"
-      type="password"
-      placeholder="********"
-      [(value)]="user.confirmPassword">
-    </app-auth-input>
-  </div>
+  @if (!isLogin) {
+    <div class="form-group">
+      <app-auth-input
+        label="Confirmer le mot de passe"
+        type="password"
+        placeholder="********"
+        [(value)]="user.confirmPassword"
+        [disabled]="isLoading()">
+      </app-auth-input>
+    </div>
 
-  <div class="form-group">
-    <app-interest-selector></app-interest-selector>
-  </div>
+    @if (userRole === 'CLIENT') {
+      <div class="form-group">
+        <app-interest-selector 
+          (preferencesChange)="onPreferencesChange($event)">
+        </app-interest-selector>
+      </div>
+    }
+  }
 
   <div class="form-actions">
     <app-auth-button
-      text="Créer mon compte"
-      type="submit">
+      [text]="isLogin ? 'Se connecter' : 'Créer mon compte'"
+      type="submit"
+      [disabled]="isLoading()">
     </app-auth-button>
   </div>
 
