--- a/frontend/src/app/features/auth-users/components/auth-input/auth-input.component.html
+++ b/frontend/src/app/features/auth-users/components/auth-input/auth-input.component.html
@@ -3,6 +3,7 @@
   <input
     [type]="type"
     [placeholder]="placeholder"
+    [disabled]="disabled"
     [ngModel]="value"
     (ngModelChange)="valueChange.emit($event)"
   />
