--- a/frontend/src/app/features/client/components/client-sidebar/client-sidebar.component.html
+++ b/frontend/src/app/features/client/components/client-sidebar/client-sidebar.component.html
@@ -1,4 +1,5 @@
-<div class="lg:col-span-4 flex flex-col gap-6">
+<div class="flex flex-col gap-6 pt-6 lg:pt-0 border-t border-slate-200 dark:border-slate-700 lg:border-t-0">
+  <p class="text-xs font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider pt-1">Mon espace</p>
   <app-loyalty-card [data]="loyaltyData()" />
   <app-quick-actions />
   <app-notifications-feed />
