--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -62,10 +62,10 @@
                     class="text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-blue-400 transition-colors">
                     Événements
                 </a>
-                <a routerLink="/create-event"
+                <!-- <a routerLink="/create-event"
                     class="text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-blue-400 transition-colors">
                     Créer un événement
-                </a>
+                </a> -->
                 <a routerLink="/help"
                     class="text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-blue-400 transition-colors">
                     Aide
