--- a/frontend/src/app/features/reservation/pages/confirmation/confirmation.page.html
+++ b/frontend/src/app/features/reservation/pages/confirmation/confirmation.page.html
@@ -36,7 +36,7 @@
 
             <!-- Right: Order Details -->
             <div class="lg:col-span-2">
-                <app-order-details [order]="order()" />
+                <app-order-details [order]="order()" [tickets]="tickets()" />
             </div>
         </div>
 
