--- a/frontend/src/app/features/client/components/client-header/client-header.component.html
+++ b/frontend/src/app/features/client/components/client-header/client-header.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <nav class="hidden lg:flex items-center gap-6">
-      <a routerLink="/" class="text-slate-900 dark:text-white text-sm font-medium hover:text-primary transition-colors">Explorer</a>
+      <a routerLink="/client/marketplace" class="text-slate-900 dark:text-white text-sm font-medium hover:text-primary transition-colors">Explorer</a>
       <!-- <a routerLink="/organizer/events" class="text-slate-900 dark:text-white text-sm font-medium hover:text-primary transition-colors">Créer un événement</a> -->
       <a routerLink="/help" class="text-slate-900 dark:text-white text-sm font-medium hover:text-primary transition-colors">Aide</a>
     </nav>
@@ -31,7 +31,7 @@
         <span class="absolute top-2 right-2 h-2.5 w-2.5 rounded-full bg-red-500 ring-2 ring-white dark:ring-slate-900"></span>
       </button>
       <div class="h-8 w-px bg-slate-200 dark:bg-white/10 mx-1 hidden sm:block"></div>
-      <button type="button" class="flex items-center gap-2 pl-2 pr-1 sm:pr-4 h-10 rounded-lg hover:bg-slate-100 dark:hover:bg-white/10 transition-colors group">
+      <button type="button" routerLink="/profile" class="flex items-center gap-2 pl-2 pr-1 sm:pr-4 h-10 rounded-lg hover:bg-slate-100 dark:hover:bg-white/10 transition-colors group">
         <div class="h-8 w-8 rounded-full bg-primary/10 flex items-center justify-center text-primary font-bold overflow-hidden border border-primary/20">
           <span class="material-symbols-outlined text-[20px]">person</span>
         </div>
