--- a/frontend/src/app/features/client/components/marketplace-filter-bar/marketplace-filter-bar.component.html
+++ b/frontend/src/app/features/client/components/marketplace-filter-bar/marketplace-filter-bar.component.html
@@ -55,7 +55,7 @@
           <div class="absolute left-0 top-0 h-full w-1/2 bg-primary rounded-full"></div>
           <div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 size-4 bg-white dark:bg-slate-700 border-2 border-primary rounded-full shadow cursor-pointer hover:scale-110 transition-transform"></div>
         </div>
-        <span class="text-xs font-bold text-slate-900 dark:text-white whitespace-nowrap">Max {{ priceMax() ?? 150 }}€</span>
+        <span class="text-xs font-bold text-slate-900 dark:text-white whitespace-nowrap">Max {{ priceMax() ?? 150 }}TND</span>
       </div>
     </div>
   </div>
