--- a/frontend/src/app/features/reservation/components/interactive-seat-map/interactive-seat-map.component.html
+++ b/frontend/src/app/features/reservation/components/interactive-seat-map/interactive-seat-map.component.html
@@ -42,7 +42,7 @@
 
                 <!-- Section Header -->
                 <div class="text-xs font-bold text-slate-400 uppercase tracking-widest mb-1">
-                    {{ section.config.name }} - {{ getPriceForSection(section.config.name) }}€
+                    {{ section.config.name }} - {{ getPriceForSection(section.config.name) }}TND
                 </div>
 
                 <!-- Layout Container -->
