--- a/frontend/src/app/features/reservation/components/validation-section/validation-section.component.html
+++ b/frontend/src/app/features/reservation/components/validation-section/validation-section.component.html
@@ -58,7 +58,7 @@
         <span class="material-symbols-outlined animate-spin">progress_activity</span>
         <span>Traitement en cours...</span>
         } @else {
-        <span>Payer {{ amount() | number:'1.2-2' }} €</span>
+        <span>Payer {{ amount() | number:'1.2-2' }} TND</span>
         <span class="material-symbols-outlined">arrow_forward</span>
         }
     </button>
