--- a/frontend/src/app/organizer/components/alerts/alerts.html
+++ b/frontend/src/app/organizer/components/alerts/alerts.html
@@ -17,7 +17,7 @@
       </div>
       <div class="flex flex-col gap-1">
         <p class="text-sm font-bold text-slate-900 dark:text-white">Virement effectué</p>
-        <p class="text-xs text-slate-500 dark:text-text-secondary leading-normal">Le paiement de €3,450 pour "Festival Été" a été envoyé.</p>
+        <p class="text-xs text-slate-500 dark:text-text-secondary leading-normal">Le paiement de TND3,450 pour "Festival Été" a été envoyé.</p>
         <p class="text-[10px] text-slate-400 mt-1">Hier</p>
       </div>
     </div>
