--- a/frontend/src/app/features/client/pages/event-detail/event-detail.page.html
+++ b/frontend/src/app/features/client/pages/event-detail/event-detail.page.html
@@ -1,5 +1,5 @@
-<div class="relative flex h-auto min-h-screen w-full flex-col overflow-x-hidden bg-slate-50 dark:bg-slate-900 text-slate-900 dark:text-white antialiased selection:bg-primary selection:text-white">
-  <app-event-detail-header />
+<div class="relative flex h-auto min-h-screen w-full flex-col overflow-x-hidden bg-white text-slate-900 antialiased selection:bg-primary selection:text-white">
+  <app-header />
 
   <main class="flex-1 flex justify-center py-8 px-4 sm:px-8 lg:px-12 xl:px-40">
     <div class="layout-content-container flex flex-col max-w-[1200px] flex-1 gap-8">
@@ -17,12 +17,6 @@
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8 relative">
           <div class="lg:col-span-8 flex flex-col gap-10">
             <app-event-detail-description [event]="event()!" [highlights]="descriptionHighlights()" />
-            <app-event-detail-lineup [artists]="artists()" />
-            <app-event-detail-seat-map
-              [sections]="seatMapSections()"
-              (expandClick)="onExpandSeatMap()"
-              (chooseOnMapClick)="onChooseOnMap()"
-            />
             <app-event-detail-reviews
               [reviews]="reviews()"
               [rating]="event()!.rating"
