--- a/frontend/src/app/features/reservation/components/order-details/order-details.component.html
+++ b/frontend/src/app/features/reservation/components/order-details/order-details.component.html
@@ -13,8 +13,8 @@
 
         <div class="flex gap-4">
             <div class="w-24 h-24 rounded-lg bg-gray-200 shrink-0 overflow-hidden">
-                <img [src]="orderData.event.imageUrl" [alt]="orderData.event.title"
-                    class="w-full h-full object-cover" />
+                <img [src]="orderData.event.imageUrl || 'assets/image.png'" [alt]="orderData.event.title"
+                    class="w-full h-full object-cover" onerror="this.src='assets/image.png'" />
             </div>
             <div class="flex-1">
                 <!-- <span class="inline-block px-2 py-0.5 bg-primary/10 text-primary text-xs font-bold rounded-full mb-2">
@@ -62,7 +62,7 @@
                     </p>
                 </div>
                 <span class="font-mono font-bold text-[#0d101c] dark:text-white">
-                    {{ item.totalPrice | number:'1.2-2' }} €
+                    {{ item.totalPrice | number:'1.2-2' }} TND
                 </span>
             </div>
             }
@@ -82,13 +82,13 @@
             <div class="flex justify-between text-sm">
                 <span class="text-gray-600 dark:text-gray-400">Sous-total</span>
                 <span class="font-mono text-[#0d101c] dark:text-white">
-                    {{ orderData.subtotal | number:'1.2-2' }} €
+                    {{ orderData.subtotal | number:'1.2-2' }} TND
                 </span>
             </div>
             <div class="flex justify-between text-sm">
                 <span class="text-gray-600 dark:text-gray-400">Frais de service</span>
                 <span class="font-mono text-[#0d101c] dark:text-white">
-                    {{ orderData.serviceFee | number:'1.2-2' }} €
+                    {{ orderData.serviceFee | number:'1.2-2' }} TND
                 </span>
             </div>
             <div class="border-t border-gray-200 dark:border-gray-700 pt-3">
@@ -97,7 +97,7 @@
                         Total payé
                     </span>
                     <span class="text-2xl font-extrabold text-green-600 dark:text-green-400 font-mono">
-                        {{ orderData.total | number:'1.2-2' }} €
+                        {{ orderData.total | number:'1.2-2' }} TND
                     </span>
                 </div>
             </div>
