--- a/frontend/src/app/features/reservation/components/seat-cart-summary/seat-cart-summary.component.html
+++ b/frontend/src/app/features/reservation/components/seat-cart-summary/seat-cart-summary.component.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="flex flex-col items-end gap-1">
                         <p class="font-bold text-slate-900 dark:text-white">
-                            {{ seat.price | number:'1.2-2' }} €
+                            {{ seat.price | number:'1.2-2' }} TND
                         </p>
                         @if (!readonly()) {
                         <button (click)="removeSeat.emit(seat.id)" [disabled]="isLoading()"
@@ -64,17 +64,17 @@
             <div class="bg-slate-50 dark:bg-slate-900/50 p-5 flex flex-col gap-3">
                 <div class="flex justify-between text-sm text-slate-500 dark:text-slate-400">
                     <span>Sous-total ({{ selectedSeats().length }} billets)</span>
-                    <span>{{ subtotal() | number:'1.2-2' }} €</span>
+                    <span>{{ subtotal() | number:'1.2-2' }} TND</span>
                 </div>
                 <div class="flex justify-between text-sm text-slate-500 dark:text-slate-400">
                     <span>Frais de service</span>
-                    <span>{{ serviceFee() | number:'1.2-2' }} €</span>
+                    <span>{{ serviceFee() | number:'1.2-2' }} TND</span>
                 </div>
                 <div class="h-px bg-slate-200 dark:bg-slate-700 w-full my-1"></div>
                 <div class="flex justify-between items-end">
                     <span class="font-bold text-lg text-slate-900 dark:text-white">Total</span>
                     <span class="font-black text-2xl text-primary">
-                        {{ total() | number:'1.2-2' }} €
+                        {{ total() | number:'1.2-2' }} TND
                     </span>
                 </div>
             </div>
