edited dsome routes, added amdin dashborad

--- a/frontend/src/app/organizer/components/side-bar/side-bar.html
+++ b/frontend/src/app/organizer/components/side-bar/side-bar.html
@@ -46,6 +46,14 @@
         <span class="material-symbols-outlined text-[22px] transition-colors">history</span>
         <span class="text-sm font-medium">Historique Scanner</span>
       </a>
+
+      <a 
+        routerLink="/profile" 
+        routerLinkActive="nav-active"
+        class="nav-link group">
+        <span class="material-symbols-outlined text-[22px] transition-colors">person</span>
+        <span class="text-sm font-medium">Profil</span>
+      </a>
     </nav>
 
     <!-- Logout Button -->
